docs/api/graphql/v1/operations/mutations/disable-integration.mdx
---
pagination_next: null
pagination_prev: null
hide_table_of_contents: true
id: disable-integration
title: disableIntegration
---




export const Bullet = () => <><span style={{ fontWeight: 'normal', fontSize: '.5em', color: 'var(--ifm-color-secondary-darkest)' }}>&nbsp;●&nbsp;</span></>

export const SpecifiedBy = (props) => <>Specification<a className="link" style={{ fontSize:'1.5em', paddingLeft:'4px' }} target="_blank" href={props.url} title={'Specified by ' + props.url}>⎘</a></>

export const Badge = (props) => <><span className={props.class}>{props.text}</span></>

import { useState } from 'react';

export const Details = ({ dataOpen, dataClose, children, startOpen = false }) => {
  const [open, setOpen] = useState(startOpen);
  return (
    <details {...(open ? { open: true } : {})} className="details" style={{ border:'none', boxShadow:'none', background:'var(--ifm-background-color)' }}>
      <summary
        onClick={(e) => {
          e.preventDefault();
          setOpen((open) => !open);
        }}
        style={{ listStyle:'none' }}
      >
      {open ? dataOpen : dataClose}
      </summary>
      {open && children}
    </details>
  );
};








Disable an active integration.

Stops the integration's execution schedule and runs its deactivation process.
The integration configuration is preserved and can be re-enabled later with
`enableIntegration`. The integration must currently be in `enabled` status.


```graphql
disableIntegration(
  organizationId: ID!
  id: ID!
): IntegrationPayload
```




### Arguments

#### [<code style={{ fontWeight: 'normal' }}>disableIntegration.<b>organizationId</b></code>](#organization-id)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>ID!</b></code>](/api/graphql/v1/types/scalars/id.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> \{#organization-id\} 
Your organization's unique identifier.


#### [<code style={{ fontWeight: 'normal' }}>disableIntegration.<b>id</b></code>](#id)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>ID!</b></code>](/api/graphql/v1/types/scalars/id.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> \{#id\} 
The integration type identifier to disable.


### Type

#### [<code style={{ fontWeight: 'normal' }}><b>IntegrationPayload</b></code>](/api/graphql/v1/types/objects/integration-payload.mdx) <Badge class="badge badge--secondary " text="object"/>